src/app/components/filter/filter.component.scss
.fs-filter {
  flex-direction: column;
  box-sizing: border-box;
  place-content: stretch flex-start;
  align-items: stretch;
  max-width: 100%;
  position: relative;
  margin-bottom: 20px;

  .results {
    min-height: 90px;
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
  }

  .status {
    position: relative;

    .progress-infinite {
      position: absolute;
      top: 0;
      width: 100%;
    }
  }

  .filter-chips {
    display: block;
  }

  .filter-searchless-container {
    display: flex;

    .filter-chips {
      flex: 1;
    }
  }

  .filter-search-container {
    place-content: center flex-start;
    align-items: center;
    flex-direction: row;
    box-sizing: border-box;
    display: flex;
    flex: 1 1 0%;
    position: relative;

    .search {
      top: 8px;
      position: absolute;
      margin-left: 1px;
      left: 0;

      mat-icon {
        transform: scale(.9);
      }
    }

    form {
      width: 100%;
    }

    .filter-input-field {
      flex-direction: row;
      box-sizing: border-box;
      display: flex;
      place-content: center flex-start;
      align-items: center;
      flex: 1;

      .mat-form-field {
        width: 100%;

        .mat-form-field-underline {
          bottom: auto;
        }
        .mat-form-field-infix {
          border-top: 0;
        }
        .mat-form-field-wrapper {
          padding-bottom: 0;
        }

        .mat-form-field-flex {
          align-items: center;
        }
      }

      .mat-form-field-prefix,
      .mat-form-field-suffix {
        align-self: flex-end;
        display: flex;
        align-items: center;

        white-space: nowrap;

        mat-icon, a {
          cursor: pointer;
          color: initial;

          &:hover {
            color: inherit;
          }
        }
      }

      .mat-form-field-infix {
        width: auto;
      }
    }
  }

  .infinite-records {
    color: #999;
    font-size: 13px;
    margin-left: 4px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;

    .order-toggle {
      cursor: pointer;
      padding-left: 4px;
    }
  }

  .filter-actions {
    margin-left: 10px;
  }

  button.reload {
    margin-left: -40px;
    right: -9px;
  }
}


@media screen and (max-width: 1199px) {
  .fs-filter .reload {
    display: none;
  }
}

@media screen and (min-width: 1200px) {
  body.fs-filter-open {
    margin-right: 350px;
  }

  .fs-filter-backdrop {
    display: none;
  }
}

body.fs-filter-open {
  &::-webkit-scrollbar {
    width: 0;
    background: transparent;
  }
}

